<resources>
    <string name="app_name">Todo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_header">Todo List</string>
    <string name="text_done_task">%d task Done</string>


    <string name="text_mark_as_read">Mark as Read</string>
    <string name="text_delete_title">Delete</string>
    <string name="text_delete_details">Are you sure about deleting this task?</string>
    <string name="text_okay">Okay</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_delete">Delete</string>

    <string name="text_enter_title">Enter Title</string>
    <string name="text_enter_description">Enter Description</string>
    <string name="text_enter_date">Set Date</string>
    <string name="text_enter_time">Set Time</string>
    <string name="text_save">Save</string>

    <string name="email_card_transition_name">email_card_%1$s</string>
    <string name="email_card_detail_transition_name">email_card_detail</string>

    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_0">0</string>
    <string name="text_dot">.</string>


</resources>