<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="3"
    android:orientation="horizontal"
    android:rowCount="4">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="0"
        android:padding="8dp"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_1"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_2"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num3"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_3"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num4"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_4"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num5"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_5"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num6"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_6"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num7"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_7"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num8"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_8"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num9"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_9"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/numDot"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/dp2"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_dot"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_margin="@dimen/dp2"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/text_0"
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        app:customBFont="CircularPro-Book.otf"/>

    <ImageButton
        android:id="@+id/numDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_margin="@dimen/dp2"
        android:layout_row="3"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_delete_gray"
        android:text=""
        android:textColor="@color/pin_pad_text"
        android:textSize="@dimen/pin_par_text_size"
        android:contentDescription="@string/text_delete" />

</GridLayout>
